welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:8: error: type mismatch;
 found   : Int(3)
 required: Boolean
			if (x<=3&&T(z)==T(y)) {
                               ^