welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {
	var x:Boolean=false;
	var w:Int=0;
	var T=Array(a%10,b%10,c%10)

	for (y<-0 to 2) {
		for (z<-0 to 2) {
			if (x<=3&&T(z)==T(y)) {
				w=w+1
			}
		}
	}

	if (w<=3&&w>=2) {
		x= true
	}

	return x
}
